package Práctica_Sistema_de_pago;

public class AppEcommerce {
    public static void main(String[] args) {
        Tienda.iniciarPago();
    }
}